--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <meta charset="UTF-8">
 
-  <title>CSS Stylesheets with Relative Paths</title>
+  <title>Michael Tunbergs Persoanl Site</title>
 
 </head>
 
